statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nginx-statefulset
spec:
  serviceName: "nginx"
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: nginx
        image: your-dockerhub-username/secure-nginx:1.19
        ports:
          - containerPort: 80
        volumeMounts:
          - name: nginx-storage
            mountPath: /usr/share/nginx/html  # Persistent storage path
          - name: nginx-config
            mountPath: /etc/nginx/nginx.conf
            subPath: nginx.conf
        resources:
          limits:
            cpu: "500m"
            memory: "256Mi"
          requests:
            cpu: "250m"
            memory: "128Mi"
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
  volumeClaimTemplates:
    - metadata:
        name: nginx-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
